<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Grados extends Model
{
    protected $table = 'grados';
    protected $fillable = [
        'nombreGrado',
        'nivelID',
    ];

    public function nivel()
    {
        return $this->belongsTo(Niveles::class, 'nivelID');
    }

    public function secciones()
    {
        return $this->hasMany(Secciones::class, 'gradoID');
    }

    public function matriculacions()
    {
        return $this->hasMany(Matriculacion::class, 'gradosID', 'id');
    }

    public function cursosAsignados()
    {
        return $this->hasMany(AsignarCursosDocentes::class, 'gradoID', 'id');
    }
}
