Table Configuraciones {
    idConfiguraciones int [pk, increment] 
    nombreConfiguraciones varchar
    descripcionConfiguraciones varchar
    direccionConfiguraciones varchar
    telefonoConfiguraciones varchar
    correoInstitucionalConfiguraciones varchar
    webConfiguraciones varchar
    logoConfiguraciones varchar
    divisaConfiguraciones varchar
}

Table Gestiones {
    idGestion int [pk, increment]
    nombreGestion varchar
}


Table Niveles {
    idNivel int [pk, increment]
    nombreNivel varchar
}

Table Turnos {
    idTurno int [pk, increment]
    nombreTurno varchar
}

Table Periodos {
    idPeriodo int [pk, increment]
    nombrePeriodo varchar
    gestionID int [ref: > Gestiones.idGestion] 
}

Table Secciones {
    idSeccion int [pk, increment]
    nombreSeccion varchar
    gradoID int [ref: > Grados.idGrado]
}

Table Grados {
    idGrado int [pk, increment]
    nombreGrado varchar
    nivelID int [ref: > Niveles.idNivel]
}

enum EstadoCurso{
    Activo
    Inactivo
}
Table Cursos {
    idCurso int [pk, increment]
    codigoCurso varchar [unique]
    nombreCurso varchar
    descripcionCurso varchar
    estado EstadoCurso [default: 'Activo']
    gradoID int [ref: > Grados.idGrado]
}

Table Roles{
    idRol int [pk, increment]
    nombreRol varchar
    descripcionRol varchar
    estadoRol varchar
}

Table Users{
    id int [pk, increment]
    name varchar
    email varchar
    password varchar
    rolID int [ref: > Roles.idRol]
}

enum EstadoPersonal{
    Activo
    Inactivo
}

enum TipoPersonal{
    Docente
    Administrativo
}

Table Personal{
    idPersonal int [pk, increment]
    nombrePersonal varchar
    apellidoPersonal varchar
    dniPersonal int 
    fechaNacimientoPersonal date
    generoPersonal varchar
    celularPersonal int
    tipoPersonal TipoPersonal
    profesionPersonal varchar
    estadoPersonal EstadoPersonal [default: 'Activo']
    userID int [ref: > Users.id]
}

Table FormacionAcademica{
    idFormacionAcademica int [pk, increment]
    tituloFormacionAcademica varchar
    nivelFormacionAcademica varchar
    anioFormacionAcademica year
    institucionFormacionAcademica varchar
    archivoFormacionAcademica varchar
    personalID int [ref: > Personal.idPersonal]
}

enum EstadoEstudiante{
    Activo
    Inactivo
}

enum EstadoApoderado{
    Activo
    Inactivo
}

Table Estudiantes{
    idEstudiante int [pk, increment]
    nombreEstudiante varchar
    apellidoEstudiante varchar
    dniEstudiante int 
    fechaNacimientoEstudiante date
    generoEstudiante varchar
    celularEstudiante int
    correoEstudiante varchar
    direccionEstudiante varchar
    fotoEstudiante varchar
    estadoEstudiante EstadoEstudiante [default: 'Activo']
    userID int [ref: > Users.id]
    padreFamiliaID int [ref: > PadreFamilia.idPadreFamilia]
}

Table PadreFamilia{
    idPadreFamilia int [pk, increment]
    nombrePadreFamilia varchar
    apellidoPadreFamilia varchar
    dniPadreFamilia int 
    fechaNacimientoPadreFamilia date
    generoPadreFamilia varchar
    celularPadreFamilia int
    correoPadreFamilia varchar
    direccionPadreFamilia varchar
    estadoPadreFamilia EstadoApoderado [default: 'Activo']
}

enum EstadoMatriculacion {
    Activo
    Inactivo
    Retirado
    Anulado
}

Table Matriculacion {
    idMatriculacion int [pk, increment]
    fechaMatriculacion date
    estudianteID int [ref: > Estudiantes.idEstudiante]
    turnoID int [ref: > Turnos.idTurno]
    gestionID int [ref: > Gestiones.idGestion]
    seccionID int [ref: > Secciones.idSeccion]
    nivelesID int [ref: > Niveles.idNivel]
    gradosID int [ref: > Grados.idGrado]
    observacionesMatriculacion text
    estadoMatriculacion EstadoMatriculacion [default: 'Activo']
}

Table Aulas{
    idAula int [pk, increment]
    nombreAula varchar
    capacidadAula int
    estadoAula varchar
}

Table AsignarSeccionesAulas{
    idAsignarSeccionAula int [pk, increment]
    seccionID int [ref: > Secciones.idSeccion]
    aulaID int [ref: > Aulas.idAula]
    gestionID int [ref: > Gestiones.idGestion]
    turnoID int [ref: > Turnos.idTurno]
    personalID int [ref: > Personal.idPersonal]
    observacionesAsignarSeccionAula text
    estadoAsignarSeccionAula varchar
}

Table AsignarCursosDocentes{
    idAsignarCursoDocente int [pk, increment]
    docenteId int [ref: > Personal.idPersonal]
    cursoID int [ref: > Cursos.idCurso]
    nivelID int [ref: > Niveles.idNivel]
    gestionID int [ref: > Gestiones.idGestion]
    gradoID int [ref: > Grados.idGrado]
    turnoID int [ref: > Turnos.idTurno]
    seccionID int [ref: > Secciones.idSeccion]
    fechaAsignarCursoDocente date
    estadoAsignarCursoDocente varchar
}

Table Pagos{
    idPago int [pk, increment]
    montoPago decimal
    metodoPago varchar
    fechaPago date
    observacionesPago text
    matriculacionID int [ref: > Matriculacion.idMatriculacion]
    estadoPago varchar
}

Table Asistencias{
    idAsistencia int [pk, increment]
    asignarCursoDocenteID int [ref: > AsignarCursosDocentes.idAsignarCursoDocente]
    fechaAsistencias date
    observacionAsistencias text
}

Table AsistenciasDetalle{
    idAsistenciasDetalle int [pk, increment]
    asistenciaID int [ref: > Asistencias.idAsistencia]
    estudianteID int [ref: > Estudiantes.idEstudiante]
    estadoAsistenciasDetalle varchar
}   

Table Calificaciones {
    idCalificacion int [pk, increment]
    asignarCursoDocenteID int [ref: > AsignarCursosDocentes.idAsignarCursoDocente]
    matriculacionID int [ref: > Matriculacion.idMatriculacion]
    periodoID int [ref: > Periodos.idPeriodo] 
    calificacionCalificaciones decimal
    calificacionLiteralCalificaciones varchar
    fechaRegistroCalificaciones date
    estadoCalificaciones varchar
}